bin_PROGRAMS = glaze

GLAZE_CORE_SRCS =	\
src/core.cc		\
src/core.hh		\
src/object.cc		\
src/object.hh		\
src/shared.hh		\
src/env.cc		\
src/env.hh		\
src/eval.cc		\
src/eval.hh		\
src/gc.cc		\
src/gc.hh		\
src/primitives.cc	\
src/primitives.hh	\
src/reader.cc		\
src/reader.hh		\
src/symbol_table.cc	\
src/symbol_table.hh	\
src/glaze.cc		\
src/glaze.h		\
src/main.cc

glaze_CPPFLAGS =

glaze_LDFLAGS = -lgc -lmpc

glaze_SOURCES = $(GLAZE_CORE_SRCS)